more bugfixes: danke-site not loading, transitioned menus jump a bit when getting rerendered cause of scroll bar

--- a/less/menus.less
+++ b/less/menus.less
@@ -67,13 +67,15 @@ div#sliding-frame {
 	position: relative;
 	width: 100%;
 	height: 100% - @close-container-height;
-	overflow-x: hidden;
+	overflow: hidden;
 }
 
 div.sliding-menu {
 	position: absolute;
     left:-100%;
 	width: 100%;
+	height: 100%;
+	overflow-x: hidden;
 	.transition(left 1s);
 }
 
