--- a/public/css/site.css
+++ b/public/css/site.css
@@ -6565,12 +6565,14 @@ div#sliding-frame {
   position: relative;
   width: 100%;
   height: 95%;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 div.sliding-menu {
   position: absolute;
   left: -100%;
   width: 100%;
+  height: 100%;
+  overflow-x: hidden;
   -webkit-transition: left 1s;
   -o-transition: left 1s;
   transition: left 1s;
